--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, viewport-fit=cover">
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="https://hudsonty.github.io/Combat-Reloaded-2/styles.css">
-    <link rel="manifest" href="https://hudsonty.github.io/Combat-Reloaded-2/manifest.json">
+    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/hudsonty/Combat-Reloaded-2/main/styles.css">
+    <link rel="manifest" href="https://raw.githubusercontent.com/hudsonty/Combat-Reloaded-2/main/manifest.json">
     <style>
         @media screen and (min-aspect-ratio: 1280/720) {
             #application-canvas.fill-mode-KEEP_ASPECT {
